impl words
